testsuite/poke.pkl/map-diag-1.pk
/* { dg-do compile } */

type AFunc = (any,any)int;

AFunc @ 0#B; /* { dg-error "" } */
